--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,11 @@ include_directories("include/" ${HDF5_Fortran_INCLUDE_PATH} ${HDF5_C_INCLUDE_PAT
 install(DIRECTORY "include/" DESTINATION include)
 
 #C static version
-add_libr
+add_library(ah5.static STATIC
+	src/api.c
+	src/command_list.c
+	src/memhandling.c
+	src/runner_thread.c
 )
 add_compiler_flags(ah5.static PRIVATE -std=c99 -pedantic -Wall -Wextra -Werror -Wfatal-errors -pedantic-errors)
 set_property(TARGET ah5.static PROPERTY OUTPUT_NAME ah5)
@@ -99,7 +103,11 @@ install(TARGETS ah5.static EXPORT Ah5_export
 )
 
 #C shared version
-add_libr
+add_library(ah5.shared SHARED
+	src/api.c
+	src/command_list.c
+	src/memhandling.c
+	src/runner_thread.c
 )
 add_compiler_flags(ah5.shared PRIVATE -std=c99 -pedantic -Wall -Wextra -Werror -Wfatal-errors -pedantic-errors)
 set_property(TARGET ah5.shared PROPERTY OUTPUT_NAME ah5)
