Fully compiling example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@
 # THE SOFTWARE.
 ################################################################################
 
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
 project(Ah5 C Fortran)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
@@ -31,8 +31,6 @@ cmake_policy(SET CMP0063 NEW)
 endif()
 
 include(AddCCompilerFlags)
-include(AppendProperty)
-include(FortranCInterface)
 
 
 # Build options
@@ -77,116 +75,79 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON)
 include_directories("include/" ${HDF5_Fortran_INCLUDE_PATH} ${HDF5_C_INCLUDE_PATH})
 install(DIRECTORY "include/" DESTINATION include)
-
-#C static version
-add_library(ah5.static STATIC
+set(Ah5_SRC 
 	src/api.c
 	src/command_list.c
 	src/memhandling.c
 	src/runner_thread.c
 )
+
+
+#C static version
+add_library(ah5.static STATIC ${Ah5_SRC})
 add_compiler_flags(ah5.static PRIVATE -std=c99 -pedantic -Wall -Wextra -Werror -Wfatal-errors -pedantic-errors)
 set_property(TARGET ah5.static PROPERTY OUTPUT_NAME ah5)
 set_property(TARGET ah5.static PROPERTY VERSION ${Ah5_VERSION})
 set_property(TARGET ah5.static PROPERTY SOVERSION ${Ah5_VERSION_MAJOR})
 set_property(TARGET ah5.static PROPERTY Ah5_MAJOR_VERSION ${Ah5_VERSION_MAJOR})
 set_property(TARGET ah5.static APPEND PROPERTY COMPATIBLE_INTERFACE_STRING Ah5_MAJOR_VERSION)
-target_link_libraries(ah5.static ${HDF5_C_LIBRARIES})
-string(REPLACE ";" " " Ah5_STATIC_COMPILE_FLAGS "${HDF5_C_COMPILE_FLAGS} ${OMP_C_COMPILE_FLAGS}")
-append_property(TARGET ah5.static PROPERTY COMPILE_FLAGS " ${Ah5_STATIC_COMPILE_FLAGS}")
-string(REPLACE ";" " " Ah5_STATIC_LINK_FLAGS "${HDF5_C_LINK_FLAGS} ${OMP_C_LINK_FLAGS}")
-append_property(TARGET ah5.static PROPERTY LINK_FLAGS " ${Ah5_STATIC_LINK_FLAGS}")
-install(TARGETS ah5.static EXPORT Ah5_export
-	LIBRARY DESTINATION lib
-	ARCHIVE DESTINATION lib
-# 	INCLUDES DESTINATION include
-)
+target_link_libraries(ah5.static PUBLIC ${HDF5_C_LIBRARIES} ${HDF5_C_LINK_FLAGS} ${OMP_C_LINK_FLAGS})
+target_compile_options(ah5.static PUBLIC ${HDF5_C_COMPILE_FLAGS} ${OMP_C_COMPILE_FLAGS})
+install(TARGETS ah5.static EXPORT Ah5_export ARCHIVE DESTINATION lib)
 
 #C shared version
-add_library(ah5.shared SHARED
-	src/api.c
-	src/command_list.c
-	src/memhandling.c
-	src/runner_thread.c
-)
+add_library(ah5.shared SHARED ${Ah5_SRC})
 add_compiler_flags(ah5.shared PRIVATE -std=c99 -pedantic -Wall -Wextra -Werror -Wfatal-errors -pedantic-errors)
 set_property(TARGET ah5.shared PROPERTY OUTPUT_NAME ah5)
 set_property(TARGET ah5.shared PROPERTY VERSION ${Ah5_VERSION})
 set_property(TARGET ah5.shared PROPERTY SOVERSION ${Ah5_VERSION_MAJOR})
 set_property(TARGET ah5.shared PROPERTY Ah5_MAJOR_VERSION ${Ah5_VERSION_MAJOR})
 set_property(TARGET ah5.shared APPEND PROPERTY COMPATIBLE_INTERFACE_STRING Ah5_MAJOR_VERSION)
-target_link_libraries(ah5.shared ${HDF5_SHARED_C_LIBRARIES})
-string(REPLACE ";" " " Ah5_SHARED_COMPILE_FLAGS "${HDF5_SHARED_C_COMPILE_FLAGS} ${OMP_C_COMPILE_FLAGS}")
-append_property(TARGET ah5.shared PROPERTY COMPILE_FLAGS " ${Ah5_SHARED_COMPILE_FLAGS}")
-string(REPLACE ";" " " Ah5_SHARED_LINK_FLAGS "${HDF5_SHARED_C_LINK_FLAGS} ${OMP_C_LINK_FLAGS}")
-append_property(TARGET ah5.shared PROPERTY LINK_FLAGS " ${Ah5_SHARED_LINK_FLAGS}")
-install(TARGETS ah5.shared EXPORT Ah5_export
-	LIBRARY DESTINATION lib
-	ARCHIVE DESTINATION lib
-# 	INCLUDES DESTINATION include
-)
-install(DIRECTORY include/ DESTINATION include)
+target_link_libraries(ah5.shared PUBLIC ${HDF5_SHARED_C_LIBRARIES} ${HDF5_SHARED_C_LINK_FLAGS} ${OMP_C_LINK_FLAGS})
+target_compile_options(ah5.shared PUBLIC ${HDF5_SHARED_C_COMPILE_FLAGS} ${OMP_C_COMPILE_FLAGS})
+install(TARGETS ah5.shared EXPORT Ah5_export LIBRARY DESTINATION lib)
 
 #Fortran version
 if("${ENABLE_FORTRAN}")
 	add_subdirectory(vendor/bpp bpp EXCLUDE_FROM_ALL)
+	
 	bpp_preprocess(SRC_Ah5_F90 src/ah5.F90.bpp)
-	add_custom_target(bpp_file DEPENDS "${SRC_Ah5_F90}") # to serialize src generation
-	install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/finclude/"
-		DESTINATION "lib/Ah5-${Ah5_VERSION}/finclude"
-	)
-
+	set(GENINC "${CMAKE_CURRENT_BINARY_DIR}/geninc")
+	file(MAKE_DIRECTORY "${GENINC}")
+	add_custom_target(Ah5_f90_inc
+			COMMAND "${CMAKE_COMMAND}" -E copy "${SRC_Ah5_F90}" "${GENINC}/Ah5.f90"
+			DEPENDS "${SRC_Ah5_F90}"
+			COMMENT "Renaming Fortran90 include file to 'Ah5.f90'"
+			VERBATIM)
+	install(FILES "${GENINC}/Ah5.f90" DESTINATION "include")
+	
 	#Fortran static version
-	add_library(ah5_f90.static STATIC
-		${SRC_Ah5_F90}
-	)
-	add_dependencies(ah5_f90.static bpp_file) # to serialize src generation
-	set_property(TARGET ah5_f90.static PROPERTY Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/finclude")
-	set_property(TARGET ah5_f90.static PROPERTY OUTPUT_NAME ah5_f90)
-	set_property(TARGET ah5_f90.static PROPERTY VERSION ${Ah5_VERSION})
-	set_property(TARGET ah5_f90.static PROPERTY SOVERSION ${Ah5_VERSION_MAJOR})
-	set_property(TARGET ah5_f90.static PROPERTY Ah5_MAJOR_VERSION ${Ah5_VERSION_MAJOR})
-	set_property(TARGET ah5_f90.static APPEND PROPERTY COMPATIBLE_INTERFACE_STRING Ah5_MAJOR_VERSION)
-	target_link_libraries(ah5_f90.static ah5.static ${HDF5_Fortran_LIBRARIES})
-	string(REPLACE ";" " " Ah5_Fortran_STATIC_COMPILE_FLAGS "${HDF5_Fortran_COMPILE_FLAGS} ${OMP_Fortran_COMPILE_FLAGS}")
-	append_property(TARGET ah5_f90.static PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_STATIC_COMPILE_FLAGS}")
-	string(REPLACE ";" " " Ah5_Fortran_STATIC_LINK_FLAGS "${HDF5_Fortran_LINK_FLAGS} ${OMP_Fortran_LINK_FLAGS}")
-	append_property(TARGET ah5_f90.static PROPERTY LINK_FLAGS " ${Ah5_Fortran_STATIC_LINK_FLAGS}")
-	install(TARGETS ah5_f90.static EXPORT Ah5_export
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib
-# 		INCLUDES DESTINATION "lib/Ah5-${Ah5_VERSION}/finclude"
-	)
+	add_library(ah5_f90.static INTERFACE)
+	add_dependencies(ah5_f90.static Ah5_f90_inc)
+	target_link_libraries(ah5_f90.static INTERFACE ah5.static ${HDF5_Fortran_LIBRARIES})
+	target_compile_options(ah5_f90.static INTERFACE ${HDF5_Fortran_COMPILE_FLAGS} ${OMP_Fortran_COMPILE_FLAGS})
+	string(REPLACE ";" " " Ah5f_T_LINK_FLAGS "${HDF5_Fortran_LINK_FLAGS} ${OMP_Fortran_LINK_FLAGS}")
+# 	set_property(TARGET ah5_f90.static APPEND_STRING PROPERTY LINK_FLAGS " ${Ah5f_T_LINK_FLAGS}")
+	target_include_directories(ah5_f90.static INTERFACE 
+					"$<BUILD_INTERFACE:${GENINC}>" 
+					"$<INSTALL_INTERFACE:include>")
 	
 	#Fortran shared version
-	add_library(ah5_f90.shared SHARED
-		${SRC_Ah5_F90}
-	)
-	add_dependencies(ah5_f90.shared bpp_file) # to serialize src generation
-	set_property(TARGET ah5_f90.shared PROPERTY Fortran_MODULE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/trash")
-	set_property(TARGET ah5_f90.shared PROPERTY OUTPUT_NAME ah5_f90)
-	set_property(TARGET ah5_f90.shared PROPERTY VERSION ${Ah5_VERSION})
-	set_property(TARGET ah5_f90.shared PROPERTY SOVERSION ${Ah5_VERSION_MAJOR})
-	set_property(TARGET ah5_f90.shared PROPERTY Ah5_MAJOR_VERSION ${Ah5_VERSION_MAJOR})
-	set_property(TARGET ah5_f90.shared APPEND PROPERTY COMPATIBLE_INTERFACE_STRING Ah5_MAJOR_VERSION)
-	target_link_libraries(ah5_f90.shared ah5.shared ${HDF5_SHARED_Fortran_LIBRARIES})
-	add_dependencies(ah5_f90.shared ah5_f90.static) # for the .mod
-	string(REPLACE ";" " " Ah5_Fortran_SHARED_COMPILE_FLAGS "${HDF5_SHARED_Fortran_COMPILE_FLAGS} ${OMP_Fortran_COMPILE_FLAGS}")
-	append_property(TARGET ah5_f90.static PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_SHARED_COMPILE_FLAGS}")
-	string(REPLACE ";" " " Ah5_Fortran_SHARED_LINK_FLAGS "${HDF5_SHARED_Fortran_LINK_FLAGS} ${OMP_Fortran_LINK_FLAGS}")
-	append_property(TARGET ah5_f90.static PROPERTY LINK_FLAGS " ${Ah5_Fortran_SHARED_LINK_FLAGS}")
-	install(TARGETS ah5_f90.shared EXPORT Ah5_export
-		LIBRARY DESTINATION lib
-		ARCHIVE DESTINATION lib
-# 		INCLUDES DESTINATION "lib/Ah5-${Ah5_VERSION}/finclude"
-	)
+	add_library(ah5_f90.shared INTERFACE)
+	add_dependencies(ah5_f90.shared Ah5_f90_inc)
+	target_link_libraries(ah5_f90.shared INTERFACE ah5.shared ${HDF5_SHARED_Fortran_LIBRARIES})
+	target_compile_options(ah5_f90.static INTERFACE ${HDF5_SHARED_Fortran_COMPILE_FLAGS} ${OMP_Fortran_COMPILE_FLAGS})
+	string(REPLACE ";" " " Ah5f_S_LINK_FLAGS "")
+# 	set_property(TARGET ah5_f90.static APPEND_STRING PROPERTY LINK_FLAGS ${HDF5_SHARED_Fortran_LINK_FLAGS} ${OMP_Fortran_LINK_FLAGS})
+	target_include_directories(ah5_f90.shared INTERFACE 
+					"$<BUILD_INTERFACE:${GENINC}>" 
+					"$<INSTALL_INTERFACE:include>")
 endif()
 
 
 # Installable config
 
 set(ConfigPackageLocation "lib/cmake/Ah5-${Ah5_VERSION}")
-set(Ah5_INCLUDE_PATH ${HDF5_C_INCLUDE_PATH} "${CMAKE_INSTALL_PREFIX}/include" "${CMAKE_INSTALL_PREFIX}/lib/Ah5-${Ah5_VERSION}/finclude")
 configure_file(cmake/Ah5Config.cmake.in "${CMAKE_CURRENT_BINARY_DIR}/Ah5Config.cmake" @ONLY)
 configure_file(cmake/Ah5ConfigVersion.cmake.in "${CMAKE_CURRENT_BINARY_DIR}/Ah5ConfigVersion.cmake" @ONLY)
 install(EXPORT Ah5_export DESTINATION ${ConfigPackageLocation})
@@ -197,34 +158,8 @@ install(FILES
 )
 
 
-# In-tree config
-
-set(MAY_PARENT_SCOPE)
-if(NOT "${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}")
-	string(REPLACE MAY_ "" MAY_PARENT_SCOPE MAY_PARENT_SCOPE)
-endif()
-
-set(Ah5_INCLUDE_PATH
-	${HDF5_C_INCLUDE_PATH}
-	"${CMAKE_CURRENT_BINARY_DIR}"
-	"${CMAKE_CURRENT_SOURCE_DIR}/include"
-	"${CMAKE_CURRENT_BINARY_DIR}/finclude"
-	${MAY_PARENT_SCOPE})
-set(Ah5_STATIC_LINK_FLAGS            "${Ah5_STATIC_LINK_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_STATIC_COMPILE_FLAGS         "${Ah5_STATIC_COMPILE_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_SHARED_LINK_FLAGS            "${Ah5_SHARED_LINK_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_SHARED_COMPILE_FLAGS         "${Ah5_SHARED_COMPILE_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_Fortran_STATIC_LINK_FLAGS    "${Ah5_Fortran_STATIC_LINK_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_Fortran_STATIC_COMPILE_FLAGS "${Ah5_Fortran_STATIC_COMPILE_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_Fortran_SHARED_LINK_FLAGS    "${Ah5_Fortran_SHARED_LINK_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_Fortran_SHARED_COMPILE_FLAGS "${Ah5_Fortran_SHARED_COMPILE_FLAGS}" ${MAY_PARENT_SCOPE})
-set(Ah5_LINK_FLAGS "${Ah5_LINK_FLAGS}" ${MAY_PARENT_SCOPE})
-
-
 # Test examples
 
-if("${ENABLE_TESTING}")
-	enable_testing()
-	add_subdirectory(examples)
-	add_subdirectory(tests)
-endif()
+enable_testing()
+add_subdirectory(examples)
+add_subdirectory(tests)
