--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,20 +25,28 @@
 include_directories(${Ah5_INCLUDE_PATH})
 find_library(M_LIB m)
 
-add_executable(ah5_example_c_shared ah5_example.c)
+add_executable(ah5_example_c_shared EXCLUDE_FROM_ALL ah5_example.c)
 target_link_libraries(ah5_example_c_shared ah5.shared ${M_LIB})
+add_test(NAME ah5_example_c_shared_build COMMAND "${CMAKE_COMMAND}" --build . --target ah5_example_c_shared WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
 add_test(NAME ah5_example_c_shared COMMAND ah5_example_c_shared)
+set_property(TEST ah5_example_c_shared PROPERTY DEPENDS ah5_example_c_shared_build)
 
-add_executable(ah5_example_c_static ah5_example.c)
+add_executable(ah5_example_c_static EXCLUDE_FROM_ALL ah5_example.c)
 target_link_libraries(ah5_example_c_static ah5.static ${M_LIB})
+add_test(NAME ah5_example_c_static_build COMMAND "${CMAKE_COMMAND}" --build . --target ah5_example_c_static WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
 add_test(NAME ah5_example_c_static COMMAND ah5_example_c_static)
+set_property(TEST ah5_example_c_static PROPERTY DEPENDS ah5_example_c_static_build)
 
 if("${ENABLE_FORTRAN}")
-	add_executable(ah5_example_f_shared ah5_example.F90)
+	add_executable(ah5_example_f_shared EXCLUDE_FROM_ALL ah5_example.F90)
 	target_link_libraries(ah5_example_f_shared ah5.shared ah5_f90.shared ${M_LIB})
+	add_test(NAME ah5_example_f_shared_build COMMAND "${CMAKE_COMMAND}" --build . --target ah5_example_f_shared WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
 	add_test(NAME ah5_example_f_shared COMMAND ah5_example_f_shared)
+	set_property(TEST ah5_example_f_shared PROPERTY DEPENDS ah5_example_f_shared_build)
 
-	add_executable(ah5_example_f_static ah5_example.F90)
+	add_executable(ah5_example_f_static EXCLUDE_FROM_ALL ah5_example.F90)
 	target_link_libraries(ah5_example_f_static ah5.static ah5_f90.static ${M_LIB})
+	add_test(NAME ah5_example_f_static_build COMMAND "${CMAKE_COMMAND}" --build . --target ah5_example_f_static WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
 	add_test(NAME ah5_example_f_static COMMAND ah5_example_f_static)
+	set_property(TEST ah5_example_f_static PROPERTY DEPENDS ah5_example_f_static_build)
 endif()
