--- a/tests/ext_inst/CMakeLists.txt
+++ b/tests/ext_inst/CMakeLists.txt
@@ -26,35 +26,17 @@ cmake_minimum_required(VERSION 2.8)
 project(Ah5 C Fortran)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../../cmake")
 
-include(AppendProperty)
-
 find_package(Ah5 REQUIRED)
 find_library(M_LIB m)
 
-enable_testing()
+add_executable(ah5_c_shared ../../examples/ah5_example.c)
+target_link_libraries(ah5_c_shared ah5.shared ${M_LIB})
 
-include_directories(${Ah5_INCLUDE_PATH})
+add_executable(ah5_c_static ../../examples/ah5_example.c)
+target_link_libraries(ah5_c_static ah5.static ${M_LIB})
 
-add_executable(ah5_example_c_shared ../../examples/ah5_example.c)
-target_link_libraries(ah5_example_c_shared ah5.shared ${M_LIB})
-append_property(TARGET ah5_example_c_shared PROPERTY LINK_FLAGS " ${Ah5_SHARED_LINK_FLAGS} ")
-append_property(TARGET ah5_example_c_shared PROPERTY COMPILE_FLAGS " ${Ah5_SHARED_COMPILE_FLAGS} ")
-add_test(NAME ah5_example_c_shared COMMAND ah5_example_c_shared)
+add_executable(ah5_f_shared ../../examples/ah5_example.F90)
+target_link_libraries(ah5_f_shared ah5.shared ah5_f90.shared ${M_LIB})
 
-add_executable(ah5_example_c_static ../../examples/ah5_example.c)
-target_link_libraries(ah5_example_c_static ah5.static ${M_LIB})
-append_property(TARGET ah5_example_c_static PROPERTY LINK_FLAGS " ${Ah5_STATIC_LINK_FLAGS}")
-append_property(TARGET ah5_example_c_static PROPERTY COMPILE_FLAGS " ${Ah5_STATIC_COMPILE_FLAGS}")
-add_test(NAME ah5_example_c_static COMMAND ah5_example_c_static)
-
-add_executable(ah5_example_f_shared ../../examples/ah5_example.F90)
-target_link_libraries(ah5_example_f_shared ah5.shared ah5_f90.shared ${M_LIB})
-append_property(TARGET ah5_example_f_shared PROPERTY LINK_FLAGS " ${Ah5_Fortran_SHARED_LINK_FLAGS}")
-append_property(TARGET ah5_example_f_shared PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_SHARED_COMPILE_FLAGS}")
-add_test(NAME ah5_example_f_shared COMMAND ah5_example_f_shared)
-
-add_executable(ah5_example_f_static ../../examples/ah5_example.F90)
-target_link_libraries(ah5_example_f_static ah5.static ah5_f90.static ${M_LIB})
-append_property(TARGET ah5_example_f_static PROPERTY LINK_FLAGS " ${Ah5_Fortran_STATIC_LINK_FLAGS}")
-append_property(TARGET ah5_example_f_static PROPERTY COMPILE_FLAGS " ${Ah5_Fortran_STATIC_COMPILE_FLAGS}")
-add_test(NAME ah5_example_f_static COMMAND ah5_example_f_static)
+add_executable(ah5_f_static ../../examples/ah5_example.F90)
+target_link_libraries(ah5_f_static ah5.static ah5_f90.static ${M_LIB})
