Improved logging, ABI compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ install(DIRECTORY "include/" DESTINATION include)
 set(Ah5_SRC 
 	src/api.c
 	src/command_list.c
+	src/logging.c
 	src/memhandling.c
 	src/runner_thread.c
 )
